fix: 댓글 버튼 수정
댓글 창이 비어있을 때도 '게시' 버튼을 누르면 댓글이 생기는 오류 수정

버튼에 disabled 속성을 인라인으로 주고 인풋이 있을 떄 제거, 댓글을 생성하는 함수가 끝나기전에 다시 disabled 속성이 생기도록 해서 해결

--- a/chanyoung/main.html
+++ b/chanyoung/main.html
@@ -88,7 +88,7 @@
         <div class="writecomments">
           <form type="submit" class="commentsForm">
             <input type="text" class="toInputSet commentsInput" placeholder="댓글 달기...">
-            <button class="toButtonSet commentsBtn">게시</button>
+            <button class="toButtonSet commentsBtn" disabled>게시</button>
           </form>
         </div>
       </div>
@@ -148,7 +148,7 @@
         <div class="writecomments">
           <form type="submit" class="commentsForm">
             <input type="text" class="toInputSet commentsInput" placeholder="댓글 달기...">
-            <button class="toButtonSet commentsBtn">게시</button>
+            <button class="toButtonSet commentsBtn" disabled>게시</button>
           </form>
         </div>
       </div>
@@ -207,7 +207,7 @@
         <div class="writecomments">
           <form type="submit" class="commentsForm">
             <input type="text" class="toInputSet commentsInput" placeholder="댓글 달기...">
-            <button class="toButtonSet commentsBtn">게시</button>
+            <button class="toButtonSet commentsBtn" disabled>게시</button>
           </form>
         </div>
       </div>
