--- a/login.html
+++ b/login.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>JUSTGRAM</title>
+    <!-- CSS 초기화 -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css"
+    />
     <!-- 아이콘 -->
     <link
       href="img/instagram-title.png"
